--- a/public/help/index.html
+++ b/public/help/index.html
@@ -15,6 +15,23 @@
 
   <!-- manifest -->
   <link rel="manifest" href="/manifest.json" </head> <body>
+  <!-- Safari meta tags to enable pwa in Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="PWAGram">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-57x57.png" size="57x57">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-60x60.png" size="60x60">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-72x72.png" size="72x72">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-114x114.png" size="114x114">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-120x120.png" size="120x120">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-144x144.png" size="144x144">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-152x152.png" size="152x152">
+  <link rel="apple-touch-icon" href="/src/images/icons/app-icon-180x180.png" size="180x180">
+
+  <!-- IE PWA meta tags -->
+  <meta name="msapplication-TileImage" content="/sc/images/icons/app-icon-144x144.png">
+  <meta name="msapplication-TileColor" content="#fff">
+  <meta name="theme-color" content="#3f51b5">
 
   <div id="app">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
